# addiction-tracker

./: .editorconfig  .gitignore  README.md  angular.json  eslint.config.js  package-lock.json  package.json  privacy.txt  snapcraft.yaml  tailwind.config.js  tsconfig.json  tsconfig.spec.json
.github/: dependabot.yml
.github/workflows/: android.yml  main.yml  snapcraft.yml
.husky/: pre-commit
bundle-scripts/: .gitignore  build-flatpak.sh  cargo-sources.json  net.charlesschaefer.addictiontracker.metainfo.xml  net.charlesschaefer.addictiontracker.yml  npm-sources.0.json
scripts/: version-bumper.js
src/: app-tailwind.css  index.html  styles.css  styles.scss
src-tauri/: Cargo.toml  addiction-tracker.desktop.template  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  desktop.rs  http.rs  lib.rs  main.rs  mdns.rs
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.db.ts  app.debug.ts  app.routes.ts  app.theme.ts  chart-types.spec.ts  chart-types.ts  db.config.ts  transloco-loader.ts  transloco.config.ts
src/app/backup/: backup.component.html  backup.component.scss  backup.component.ts
src/app/components/: AuthPromptDialog.tsx  AuthWrapper.tsx  achievements-display.component.html  achievements-display.component.ts  achievements-milestones.component.html  achievements-milestones.component.ts  add-record-button.component.html  add-record-button.component.ts  alternative-activity-overlay.component.html  alternative-activity-overlay.component.ts  auth-screen.component.html  auth-screen.component.ts  financial-impact-card.component.html  financial-impact-card.component.ts  header.component.html  header.component.ts  lock-button.component.html  lock-button.component.ts  motivational-factor-display.component.html  motivational-factor-display.component.ts  motivational-factor-input.component.html  motivational-factor-input.component.ts  navigation-cards.component.html  navigation-cards.component.ts  onboarding-flow.component.html  onboarding-flow.component.ts  page-title.component.html  protection-setup-dialog.component.html  protection-setup-dialog.component.ts  record-substance-use.component.html  record-substance-use.component.ts  sobriety-stats.component.html  sobriety-stats.component.ts  sobriety-tracker-card.component.html  sobriety-tracker-card.component.ts  substance-analysis-card.component.html  substance-analysis-card.component.ts
src/app/cost/: cost.component.html  cost.component.scss  cost.component.spec.ts  cost.component.ts
src/app/cost-add/: cost-add.component.html  cost-add.component.spec.ts  cost-add.component.ts
src/app/data/: achievement.data.ts  achievements.data.ts  alternative-activity.data.ts  trigger.data.ts
src/app/dto/: achievement.dto.ts  alternative-activity.dto.ts  cost.dto.ts  motivational-factor.dto.ts  recommendation.dto.ts  substance.dto.ts  trigger.dto.ts  usage-filling.dto.ts  usage.dto.ts
src/app/home/: home.component.html
src/app/license/: license.component.html  license.component.ts
src/app/recommendation/: recommendation.component.html  recommendation.component.spec.ts  recommendation.component.ts
src/app/recommendations/: recommendations.component.html  recommendations.component.spec.ts  recommendations.component.ts
src/app/respiration/: respiration.component.html  respiration.component.scss  respiration.component.spec.ts  respiration.component.ts
src/app/services/: achievement.service.ts  alternative-activity.service.spec.ts  alternative-activity.service.ts  backup.service.ts  cost.service.spec.ts  cost.service.ts  data-updated.service.ts  db.service.ts  motivational-factor.service.spec.ts  motivational-factor.service.ts  otp-generator.service.spec.ts  otp-generator.service.ts  recommendation.service.spec.ts  recommendation.service.ts  sentiment.service.spec.ts  sentiment.service.ts  service.abstract.ts  substance.service.spec.ts  substance.service.ts  theme.service.ts  trigger.service.spec.ts  trigger.service.ts  usage-filling.service.spec.ts  usage-filling.service.ts  usage.service.spec.ts  usage.service.ts
src/app/substance-add/: substance-add.component.html  (+2 more)
src/assets/: LICENSE  splashscreen.html
src/environments/: .env.example  config-env.ts
(+137 files in other folders)
