[package]
name = "addiction-tracker"
version = "0.0.9"
description = "Addiction Tracker"
authors = ["Charles Schaefer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "addiction_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["tray-icon", "image-png"] }
serde                     = { version = "1", features = ["derive"] }
serde_json                = { version = "1", features = ["std"] }
mdns-sd                   = "0.12"
tauri-plugin-notification = "2"
hostname = "0.4.0"
tiny_http = "0.12.0"
local-ip-addr = "0.1.1"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
