[package]
name = "addiction-tracker"
version = "0.0.11"
description = "Addiction Tracker"
authors = ["Charles Schaefer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "addiction_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
serde                     = { version = "1", features = ["derive"] }
serde_json                = { version = "1", features = ["std"] }
mdns-sd                   = "0.12"
tauri-plugin-notification = "2"
hostname = "0.4.0"
tiny_http = "0.12.0"
local-ip-addr = "0.1.1"
tauri-plugin-http = "2"

[build]
rustc-wrapper = "/usr/bin/sccache"


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
    "-Zcodegen-backend=cranelift",
    # "-Zshare-generics=y",
]

[target.arm64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]
[target.aarch64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
